--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,16 +19,17 @@ jobs:
           cd tests/fixtures/minimal/
           derex reset-mysql
           derex discovery reset-mysql
-          derex reset-rabbitmq
-        displayName: "Prime Mysql and Rabbitmq"
+          derex discovery load-fixtures
+          derex discovery create-index
+        displayName: "Prime Mysql and Elasticsearch"
 
       - script: |
           set -ex
           cd tests/fixtures/minimal/
           derex runmode production
           ddc-project config
-          ddc-project up -d lms discovery
-        displayName: "Start lms and discovery"
+          ddc-project up -d lms cms discovery
+        displayName: "Start lms, cms and discovery"
 
       - script: |
           set -ex
@@ -38,9 +39,24 @@ jobs:
 
       - script: |
           set -ex
-          CMD="curl --connect-timeout 30 --retry 5 --retry-delay 5 -f http://localhost:4910/health/"
-          $CMD || (sleep 10; $CMD )
-        displayName: "Curl the discovery"
+          COUNT=$(
+            curl -sf http://localhost:4910/health/ \
+              --connect-timeout 30 \
+              --retry 5 \
+              --retry-delay 5 \
+              --retry-connrefused | grep -o "OK" | wc -l
+          )
+          if [ $COUNT != 2 ]; then
+              exit 1
+          fi
+        displayName: "Curl the Discovery service"
+
+      - script: |
+          set -ex
+          cd tests/fixtures/minimal/
+          derex discovery refresh-course-metadata
+          derex discovery update-index
+        displayName: "Run Discovery data synchronization pipeline"
 
   - job: TestComplete
     timeoutInMinutes: 40
@@ -54,16 +70,17 @@ jobs:
           cd tests/fixtures/complete/
           derex reset-mysql
           derex discovery reset-mysql
-          derex reset-rabbitmq
-        displayName: "Prime Mysql and Rabbitmq"
+          derex discovery load-fixtures
+          derex discovery create-index
+        displayName: "Prime Mysql and Elasticsearch"
 
       - script: |
           set -ex
           cd tests/fixtures/complete/
           derex runmode production
           ddc-project config
-          ddc-project up -d lms discovery
-        displayName: "Start lms and discovery"
+          ddc-project up -d lms cms ecommerce discovery
+        displayName: "Start lms, cms, ecommerce and discovery"
 
       - script: |
           set -ex
@@ -73,6 +90,21 @@ jobs:
 
       - script: |
           set -ex
-          CMD="curl --connect-timeout 30 --retry 5 --retry-delay 5 -f http://localhost:4910/health/"
-          $CMD || (sleep 10; $CMD )
-        displayName: "Curl the discovery"
+          COUNT=$(
+            curl -sf http://localhost:4910/health/ \
+              --connect-timeout 30 \
+              --retry 5 \
+              --retry-delay 5 \
+              --retry-connrefused | grep -o "OK" | wc -l
+          )
+          if [ $COUNT != 2 ]; then
+              exit 1
+          fi
+        displayName: "Curl the Discovery service"
+
+      - script: |
+          set -ex
+          cd tests/fixtures/complete/
+          derex discovery refresh-course-metadata
+          derex discovery update-index
+        displayName: "Run Discovery data synchronization pipeline"
