--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,104 +7,22 @@ schedules:
     always: true
 
 jobs:
-  - job: TestMinimal
-    timeoutInMinutes: 40
-    pool:
-      vmImage: "ubuntu-latest"
-    steps:
-      - template: azure-pipelines/setup.yml
+  - template: azure-pipelines/minimal.yml
+    parameters:
+      JOB_VARIANT: UnPinned
+      PIN_VERSIONS:
 
-      - script: |
-          set -ex
-          cd tests/fixtures/minimal/
-          derex reset-mysql
-          derex discovery reset-mysql
-          derex discovery load-fixtures
-          derex discovery create-index
-        displayName: "Prime Mysql and Elasticsearch"
+  - template: azure-pipelines/minimal.yml
+    parameters:
+      JOB_VARIANT: Pinned
+      PIN_VERSIONS: yes
 
-      - script: |
-          set -ex
-          cd tests/fixtures/minimal/
-          ddc-project config
-          ddc-project up -d lms cms discovery
-        displayName: "Start lms, cms and discovery"
+  - template: azure-pipelines/complete.yml
+    parameters:
+      JOB_VARIANT: UnPinned
+      PIN_VERSIONS:
 
-      - script: |
-          set -ex
-          cd tests/fixtures/minimal/
-          ddc-project logs
-        displayName: "Show logs"
-
-      - script: |
-          set -ex
-          COUNT=$(
-            curl -sf http://localhost:4910/health/ \
-              --connect-timeout 30 \
-              --retry 5 \
-              --retry-delay 5 \
-              --retry-connrefused | grep -o "OK" | wc -l
-          )
-          if [ $COUNT != 2 ]; then
-              exit 1
-          fi
-        displayName: "Curl the Discovery service"
-
-      - script: |
-          set -ex
-          cd tests/fixtures/minimal/
-          derex discovery refresh-course-metadata
-          derex discovery update-index
-        displayName: "Run Discovery data synchronization pipeline"
-
-  - job: TestComplete
-    timeoutInMinutes: 40
-    pool:
-      vmImage: "ubuntu-latest"
-    steps:
-      - template: azure-pipelines/setup.yml
-
-      - script: |
-          set -ex
-          cd tests/fixtures/complete/
-          derex reset-mysql
-          derex ecommerce reset-mysql
-          derex ecommerce load-fixtures
-          derex discovery reset-mysql
-          derex discovery load-fixtures
-          derex discovery create-index
-        displayName: "Prime Mysql and Elasticsearch"
-
-      - script: |
-          set -ex
-          cd tests/fixtures/complete/
-          ddc-project config
-          ddc-project up -d lms cms ecommerce discovery
-        displayName: "Start lms, cms, ecommerce and discovery"
-
-      - script: |
-          set -ex
-          cd tests/fixtures/complete/
-          ddc-project logs
-        displayName: "Show logs"
-
-      - script: |
-          set -ex
-          COUNT=$(
-            curl -sf http://localhost:4910/health/ \
-              --connect-timeout 30 \
-              --retry 5 \
-              --retry-delay 5 \
-              --retry-connrefused | grep -o "OK" | wc -l
-          )
-          if [ $COUNT != 2 ]; then
-              exit 1
-          fi
-        displayName: "Curl the Discovery service"
-
-      - script: |
-          set -ex
-          cd tests/fixtures/complete/
-          derex discovery refresh-course-metadata
-          derex discovery update-index
-        displayName: "Run Discovery data synchronization pipeline"
+  - template: azure-pipelines/complete.yml
+    parameters:
+      JOB_VARIANT: Pinned
+      PIN_VERSIONS: yes
