--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,14 @@ chardet==3.0.4            # via requests
 click-plugins==1.1.1      # via derex.runner
 click==7.0                # via click-plugins, derex.runner
 cryptography==2.8         # via paramiko
-https://github.com/Abstract-Tech/derex.runner/tarball/10bd1f34686d7ae1e5ecb7882a10d25de589ee47#egg=derex.runner  # via -r requirements.in (line 1)
+https://github.com/Abstract-Tech/derex.runner/tarball/master#egg=derex.runner  # via -r requirements.in
 docker-compose==1.25.4    # via derex.runner
 docker[ssh]==4.1.0        # via docker-compose
 dockerpty==0.4.1          # via docker-compose
 docopt==0.6.2             # via docker-compose
 idna==2.8                 # via requests
 importlib-metadata==1.4.0  # via derex.runner, jsonschema, pluggy
-jinja2==2.10.3            # via -r requirements.in (line 2), derex.runner
+jinja2==2.10.3            # via -r requirements.in, derex.runner
 jsonschema==3.2.0         # via docker-compose
 markupsafe==1.1.1         # via jinja2
 more-itertools==8.1.0     # via zipp
