Add missing derex.ecommerce dev requirement

--- a/azure-pipelines/setup.yml
+++ b/azure-pipelines/setup.yml
@@ -8,7 +8,9 @@ steps:
       set -ex
       pip3 install -U pip setuptools
       [ -z "${{ parameters.PIN_VERSIONS }}" ] && pip3 install -r requirements_dev.txt .
-      [ ! -z "${{ parameters.PIN_VERSIONS }}" ] && pip3 install . https://github.com/Abstract-Tech/derex.runner/tarball/master#egg=derex.runner
+      [ ! -z "${{ parameters.PIN_VERSIONS }}" ] && pip3 install . \
+        https://github.com/Abstract-Tech/derex.runner/tarball/master#egg=derex.runner \
+        https://github.com/Abstract-Tech/derex.ecommerce/tarball/master#egg=derex.ecommerce
       true
     displayName: 'Install derex.runner'
 
