--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -16,7 +16,8 @@ chardet==3.0.4            # via requests
 click-plugins==1.1.1      # via derex.runner
 click==7.0                # via click-plugins, derex.runner
 cryptography==2.8         # via paramiko
-https://github.com/Abstract-Tech/derex.runner/tarball/master#egg=derex.runner  # via -r requirements.in
+https://github.com/Abstract-Tech/derex.ecommerce/tarball/master#egg=derex.ecommerce  # via -r requirements_dev.in
+https://github.com/Abstract-Tech/derex.runner/tarball/master#egg=derex.runner  # via -r requirements.in, derex.ecommerce
 distlib==0.3.0            # via virtualenv
 docker-compose==1.25.4    # via derex.runner
 docker[ssh]==4.2.0        # via docker-compose
@@ -26,7 +27,7 @@ filelock==3.0.12          # via virtualenv
 identify==1.4.11          # via pre-commit
 idna==2.8                 # via requests
 importlib-metadata==1.5.0  # via derex.runner, jsonschema, pluggy, pre-commit, virtualenv
-jinja2==2.11.1            # via -r requirements.in, derex.runner
+jinja2==2.11.1            # via -r requirements.in, derex.ecommerce, derex.runner
 jsonschema==3.2.0         # via docker-compose
 markupsafe==1.1.1         # via jinja2
 nodeenv==1.3.5            # via pre-commit
