Test with runmode production

--- a/azure-pipelines/complete.yml
+++ b/azure-pipelines/complete.yml
@@ -30,6 +30,7 @@ jobs:
       - script: |
           set -ex
           cd tests/fixtures/complete/
+          derex runmode production
           ddc-project config
           ddc-project up -d lms cms ecommerce discovery
         displayName: "Start lms, cms, ecommerce and discovery"
