--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,48 +4,56 @@
 #
 #    pip-compile requirements_dev.in
 #
-appdirs==1.4.3            # via virtualenv
-aspy.yaml==1.3.0          # via pre-commit
+appdirs==1.4.4            # via derex-runner, derex.runner, virtualenv
 attrs==19.3.0             # via jsonschema
 bcrypt==3.1.7             # via paramiko
 cached-property==1.5.1    # via docker-compose
-certifi==2019.11.28       # via requests
+certifi==2020.4.5.1       # via requests
 cffi==1.14.0              # via bcrypt, cryptography, pynacl
-cfgv==3.0.0               # via pre-commit
+cfgv==3.1.0               # via pre-commit
 chardet==3.0.4            # via requests
-click-plugins==1.1.1      # via derex.runner
-click==7.0                # via click-plugins, derex.runner
-cryptography==2.8         # via paramiko
+click-plugins==1.1.1      # via derex-runner, derex.runner
+click==7.1.2              # via click-plugins, derex-runner, derex.runner
+colorama==0.4.3           # via rich
+commonmark==0.9.1         # via rich
+cryptography==2.9.2       # via paramiko
 https://github.com/Abstract-Tech/derex.ecommerce/tarball/master#egg=derex.ecommerce  # via -r requirements_dev.in
-https://github.com/Abstract-Tech/derex.runner/tarball/master#egg=derex.runner  # via -r requirements.in, derex.ecommerce
+https://github.com/Abstract-Tech/derex.runner/tarball/master#egg=derex.runner  # via -r requirements.in
 distlib==0.3.0            # via virtualenv
-docker-compose==1.25.4    # via derex.runner
+docker-compose==1.25.5    # via derex-runner, derex.runner
 docker[ssh]==4.2.0        # via docker-compose
 dockerpty==0.4.1          # via docker-compose
 docopt==0.6.2             # via docker-compose
 filelock==3.0.12          # via virtualenv
-identify==1.4.11          # via pre-commit
-idna==2.8                 # via requests
-importlib-metadata==1.5.0  # via derex.runner, jsonschema, pluggy, pre-commit, virtualenv
-jinja2==2.11.1            # via -r requirements.in, derex.ecommerce, derex.runner
+identify==1.4.16          # via pre-commit
+idna==2.9                 # via requests
+importlib-metadata==1.6.0  # via derex-runner, derex.runner, jsonschema, pluggy, pre-commit, virtualenv
+jinja2==2.11.2            # via derex-runner, derex.runner
 jsonschema==3.2.0         # via docker-compose
 markupsafe==1.1.1         # via jinja2
 nodeenv==1.3.5            # via pre-commit
 paramiko==2.7.1           # via docker
-pluggy==0.13.1            # via derex.runner
-pre-commit==2.0.1         # via -r requirements_dev.in
-pycparser==2.19           # via cffi
+pluggy==0.13.1            # via derex-runner, derex.runner
+pprintpp==0.4.0           # via rich
+pre-commit==2.4.0         # via -r requirements_dev.in
+pycparser==2.20           # via cffi
+pygments==2.6.1           # via rich
+pymongo==3.10.1           # via derex-runner, derex.runner
+pymysql==0.9.3            # via derex-runner, derex.runner
 pynacl==1.3.0             # via paramiko
-pyrsistent==0.15.7        # via jsonschema
-pyyaml==5.3               # via aspy.yaml, derex.runner, docker-compose, pre-commit
-requests==2.22.0          # via docker, docker-compose
-six==1.14.0               # via bcrypt, cryptography, docker, docker-compose, dockerpty, jsonschema, pynacl, pyrsistent, virtualenv, websocket-client
+pyrsistent==0.16.0        # via jsonschema
+pyyaml==5.3.1             # via derex-runner, derex.runner, docker-compose, pre-commit
+requests==2.23.0          # via docker, docker-compose
+rich==1.2.3               # via derex-runner, derex.runner
+six==1.15.0               # via bcrypt, cryptography, docker, docker-compose, dockerpty, jsonschema, pynacl, pyrsistent, virtualenv, websocket-client
+tabulate==0.8.7           # via derex-runner, derex.runner
 texttable==1.6.2          # via docker-compose
-toml==0.10.0              # via pre-commit
-urllib3==1.25.8           # via requests
-virtualenv==20.0.3        # via pre-commit
+toml==0.10.1              # via pre-commit
+typing-extensions==3.7.4.2  # via rich
+urllib3==1.25.9           # via requests
+virtualenv==20.0.21       # via pre-commit
 websocket-client==0.57.0  # via docker, docker-compose
-zipp==2.2.0               # via importlib-metadata
+zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
