`derex reset-mysql` → `derex mysql reset`

--- a/azure-pipelines/complete.yml
+++ b/azure-pipelines/complete.yml
@@ -19,10 +19,10 @@ jobs:
       - script: |
           set -ex
           cd tests/fixtures/complete/
-          derex reset-mysql
-          derex ecommerce reset-mysql
+          derex mysql reset --force
+          derex ecommerce mysql reset
           derex ecommerce load-fixtures
-          derex discovery reset-mysql
+          derex discovery mysql reset
           derex discovery load-fixtures
           derex discovery create-index
         displayName: "Prime Mysql and Elasticsearch"
